# semana_automacao

./: README.md  pyproject.toml
MARVEL-API/: CreateCharacters.robot
