[tool.poetry]
name = "semana_automacao"
version = "0.1.0"
description = "Semana da Automacao QAninja"
authors = ["Oséias Flores <osf182@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
robotframework = "^4.1.1"
robotframework-requests = "^0.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
